@@ -1,0 +1,71 @@
+/****
+DIAMOND protein aligner
+Copyright (C) 2013-2019 Benjamin Buchfink <buchfink@gmail.com>
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+****/
+
+#ifndef FINGER_PRINT_H_
+#define FINGER_PRINT_H_
+
+#include "../util/simd.h"
+
+#ifdef __SSE2__
+
+struct Byte_finger_print_48
+{
+	Byte_finger_print_48(const Letter *q) :
+		r1(_mm_loadu_si128((__m128i const*)(q - 16))),
+		r2(_mm_loadu_si128((__m128i const*)(q))),
+		r3(_mm_loadu_si128((__m128i const*)(q + 16)))
+	{}
+	static uint64_t match_block(__m128i x, __m128i y)
+	{
+		return (uint64_t)_mm_movemask_epi8(_mm_cmpeq_epi8(x, y));
+	}
+	unsigned match(const Byte_finger_print_48 &rhs) const
+	{
+		return popcount64(match_block(r3, rhs.r3) << 32 | match_block(r1, rhs.r1) << 16 | match_block(r2, rhs.r2));
+	}
+	__m128i r1, r2, r3;
+};
+
+#else
+
+struct Byte_finger_print_48
+{
+	Byte_finger_print_48()
+	{}
+	Byte_finger_print_48(const Letter *q)
+	{
+		//printf("%llx\n", q);
+		memcpy(r, q - 16, 48);
+	}
+	unsigned match(const Byte_finger_print_48 &rhs) const
+	{
+		unsigned n = 0;
+		for (unsigned i = 0; i < 48; ++i)
+			if (r[i] == rhs.r[i])
+				++n;
+		return n;
+	}
+	Letter r[48];
+	//char r[32];
+};
+
+#endif
+
+typedef Byte_finger_print_48 Finger_print;
+
+#endif
