@@ -16,7 +16,6 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ****/
 
-#include "align_range.h"
 #include "../data/reference.h"
 #include "../basic/config.h"
 #include "seed_complexity.h"
