@@ -1,6 +1,6 @@
 /****
 DIAMOND protein aligner
-Copyright (C) 2013-2017 Benjamin Buchfink <buchfink@gmail.com>
+Copyright (C) 2013-2019 Benjamin Buchfink <buchfink@gmail.com>
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -16,17 +16,28 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 ****/
 
-#include "align_range.h"
+#include <vector>
+#include "search.h"
 #include "hit_filter.h"
 #include "sse_dist.h"
 #include "seed_complexity.h"
+#include "finger_print.h"
 
-thread_local vector<Finger_print> Seed_filter::vq, Seed_filter::vs;
-thread_local vector<Stage1_hit> Seed_filter::hits;
+using std::vector;
 
-Trace_pt_buffer* Trace_pt_buffer::instance;
+namespace Search {
+namespace DISPATCH_ARCH {
 
 const unsigned tile_size[] = { 1024, 128 };
+
+struct Range_ref
+{
+	Range_ref(vector<Finger_print>::const_iterator q_begin, vector<Finger_print>::const_iterator s_begin) :
+		q_begin(q_begin),
+		s_begin(s_begin)
+	{}
+	const vector<Finger_print>::const_iterator q_begin, s_begin;
+};
 
 #define FAST_COMPARE2(q, s, stats, q_ref, s_ref, q_offset, s_offset, hits) if (q.match(s) >= config.min_identities) stats.inc(Statistics::TENTATIVE_MATCHES1)
 #define FAST_COMPARE(q, s, stats, q_ref, s_ref, q_offset, s_offset, hits) if (q.match(s) >= config.min_identities) hits.push_back(Stage1_hit(q_ref, q_offset, s_ref, s_offset))
@@ -103,27 +114,29 @@ void inner_search(vector<Finger_print>::const_iterator q,
 	}
 }
 
-void Seed_filter::tiled_search(vector<Finger_print>::const_iterator q,
+void tiled_search(vector<Finger_print>::const_iterator q,
 	vector<Finger_print>::const_iterator q_end,
 	vector<Finger_print>::const_iterator s,
 	vector<Finger_print>::const_iterator s_end,
 	const Range_ref &ref,
-	unsigned level)
+	unsigned level,
+	std::vector<Stage1_hit> &hits,
+	Statistics &stats)
 {
 	switch (level) {
 	case 0:
 	case 1:
 		for (; q < q_end; q += std::min(q_end - q, (ptrdiff_t)tile_size[level]))
 			for (vector<Finger_print>::const_iterator s2 = s; s2 < s_end; s2 += std::min(s_end - s2, (ptrdiff_t)tile_size[level]))
-				tiled_search(q, q + std::min(q_end - q, (ptrdiff_t)tile_size[level]), s2, s2 + std::min(s_end - s2, (ptrdiff_t)tile_size[level]), ref, level+1);
+				tiled_search(q, q + std::min(q_end - q, (ptrdiff_t)tile_size[level]), s2, s2 + std::min(s_end - s2, (ptrdiff_t)tile_size[level]), ref, level + 1, hits, stats);
 		break;
 	case 2:
-		for (; q < q_end; q += std::min(q_end-q,(ptrdiff_t)6))
+		for (; q < q_end; q += std::min(q_end - q, (ptrdiff_t)6))
 			if (q_end - q < 6)
 				inner_search(q, q_end, s, s_end, ref, hits, stats);
 			else
 				query_register_search(q, s, s_end, ref, hits, stats);
-	}	
+	}
 }
 
 void load_fps(const Packed_loc *p, size_t n, vector<Finger_print> &v, const Sequence_set &seqs)
@@ -135,8 +148,10 @@ void load_fps(const Packed_loc *p, size_t n, vector<Finger_print> &v, const Sequ
 		v.push_back(Finger_print(seqs.data(*p)));
 }
 
-void Seed_filter::run(const Packed_loc *q, size_t nq, const Packed_loc *s, size_t ns)
+void stage1(const Packed_loc *q, size_t nq, const Packed_loc *s, size_t ns, Statistics &stats, Trace_pt_buffer::Iterator &out, const unsigned sid)
 {
+	thread_local vector<Finger_print> vq, vs;
+	thread_local vector<Stage1_hit> hits;
 	if (config.simple_freq && !SeedComplexity::complex(query_seqs::get().data(q[0]), shapes[sid])) {
 		stats.inc(Statistics::LOW_COMPLEXITY_SEEDS);
 		return;
@@ -144,8 +159,10 @@ void Seed_filter::run(const Packed_loc *q, size_t nq, const Packed_loc *s, size_
 	hits.clear();
 	load_fps(q, nq, vq, *query_seqs::data_);
 	load_fps(s, ns, vs, *ref_seqs::data_);
-	tiled_search(vq.begin(), vq.end(), vs.begin(), vs.end(), Range_ref(vq.begin(), vs.begin()), 0);
+	tiled_search(vq.begin(), vq.end(), vs.begin(), vs.end(), Range_ref(vq.begin(), vs.begin()), 0, hits, stats);
 	std::sort(hits.begin(), hits.end());
 	stats.inc(Statistics::TENTATIVE_MATCHES1, hits.size());
-	stage2_search(q, s, hits, stats, out, sid);
+	stage2(q, s, hits, stats, out, sid);
 }
+
+}}
