@@ -13,10 +13,7 @@ using std::chrono::nanoseconds;
 using std::chrono::duration_cast;
 using std::list;
 
-namespace Benchmark {
-
-__m128i global_128;
-int global_int;
+namespace Benchmark { namespace DISPATCH_ARCH {
 
 int xdrop_window2(const Letter *query, const Letter *subject)
 {
@@ -64,17 +61,15 @@ void benchmark_ungapped(const sequence &s1, const sequence &s2)
 	high_resolution_clock::time_point t1 = high_resolution_clock::now();
 
 	const Letter *q = s1.data(), *s = s2.data();
-	int score = 0;
 
 	for (size_t i = 0; i < n; ++i) {
 
-		score += xdrop_window2(q, s);
+		volatile int score = xdrop_window2(q, s);
 
 	}
 	high_resolution_clock::time_point t2 = high_resolution_clock::now();
 	std::chrono::nanoseconds time_span = duration_cast<std::chrono::nanoseconds>(t2 - t1);
 
-	global_int = score;
 	cout << "Scalar ungapped extension:\t" << (double)time_span.count() / (n*40) * 1000 << " ps/Cell" << endl;
 }
 
@@ -85,16 +80,13 @@ void benchmark_ungapped_sse(const sequence &s1, const sequence &s2)
 
 	const Letter *q = s1.data(), *s = s2.data();
 	int score = 0;
-	score_vector<uint8_t> sv, sum;
-	unsigned a = (unsigned)global_int & 15;
+	score_vector<uint8_t> sv;
 	__m128i seq = _mm_loadu_si128((const __m128i*)s1.data());
 
 	for (size_t i = 0; i < n; ++i) {		
 		sv.set_ssse3(i & 15, seq);
-		sum = sum + sv;
+		volatile __m128i x = sv.data_;
 	}
-
-	_mm_storeu_si128(&global_128, sum.data_);
 	cout << "SSE score shuffle:\t\t" << (double)duration_cast<std::chrono::nanoseconds>(high_resolution_clock::now() - t1).count() / (n * 16) * 1000 << " ps/Letter" << endl;
 }
 
@@ -118,7 +110,6 @@ void swipe_cell_update() {
 		for (size_t i = 0; i < n; ++i) {
 			diagonal_cell = cell_update(diagonal_cell, scores, gap_extension, gap_open, horizontal_gap, vertical_gap, best, vbias);
 		}
-		_mm_storeu_si128(&global_128, diagonal_cell.data_);
 	}
 	cout << "SWIPE cell update (uint8_t):\t" << (double)duration_cast<std::chrono::nanoseconds>(high_resolution_clock::now() - t1).count() / (n * 16) * 1000 << " ps/Cell" << endl;
 
@@ -128,7 +119,6 @@ void swipe_cell_update() {
 		for (size_t i = 0; i < n; ++i) {
 			diagonal_cell = cell_update(diagonal_cell, scores, gap_extension, gap_open, horizontal_gap, vertical_gap, best);
 		}
-		_mm_storeu_si128(&global_128, diagonal_cell.data_);
 	}
 	cout << "SWIPE cell update (int8_t):\t" << (double)duration_cast<std::chrono::nanoseconds>(high_resolution_clock::now() - t1).count() / (n * 16) * 1000 << " ps/Cell" << endl;
 }
@@ -140,7 +130,6 @@ void swipe(const sequence &s1, const sequence &s2) {
 	high_resolution_clock::time_point t1 = high_resolution_clock::now();
 	for (size_t i = 0; i < n; ++i) {
 		vector<int> v = DP::Swipe::swipe(s1, target, target + 16);
-		global_int = v[0];
 	}
 	cout << "SWIPE:\t\t\t\t" << (double)duration_cast<std::chrono::nanoseconds>(high_resolution_clock::now() - t1).count() / (n * s1.length() * s2.length() * 16) * 1000 << " ps/Cell" << endl;
 }
@@ -159,18 +148,18 @@ void banded_swipe(const sequence &s1, const sequence &s2) {
 	cout << "Banded SWIPE:\t\t\t" << (double)duration_cast<std::chrono::nanoseconds>(high_resolution_clock::now() - t1).count() / (n * s1.length() * 65 * 8) * 1000 << " ps/Cell" << endl;
 }
 
-}
-
 void benchmark() {
 	vector<Letter> s1, s2;
 	
 	s1 = sequence::from_string("mpeeeysefkelilqkelhvvyalshvcgqdrtllasillriflhekleslllctlndreismedeattlfrattlastlmeqymkatatqfvhhalkdsilkimeskqscelspskleknedvntnlthllnilselvekifmaseilpptlryiygclqksvqhkwptnttmrtrvvsgfvflrlicpailnprmfniisdspspiaartlilvaksvqnlanlvefgakepymegvnpfiksnkhrmimfldelgnvpelpdttehsrtdlsrdlaalheicvahsdelrtlsnergaqqhvlkkllaitellqqkqnqyt");
 	s2 = sequence::from_string("erlvelvtmmgdqgelpiamalanvvpcsqwdelarvlvtlfdsrhllyqllwnmfskeveladsmqtlfrgnslaskimtfcfkvygatylqklldpllrivitssdwqhvsfevdptrlepsesleenqrnllqmtekffhaiissssefppqlrsvchclyqvvsqrfpqnsigavgsamflrfinpaivspyeagildkkpppiierglklmskilqsianhvlftkeehmrpfndfvksnfdaarrffldiasdcptsdavnhslsfisdgnvlalhrllwnnqekigqylssnrdhkavgrrpfdkmatllaylgppe");
 	
-	Benchmark::benchmark_ungapped(s1, s2);
-	Benchmark::benchmark_ungapped_sse(s1, s2);
-	Benchmark::benchmark_transpose();
-	Benchmark::swipe_cell_update();
-	Benchmark::swipe(s1, s2);
-	Benchmark::banded_swipe(s1, s2);
+	benchmark_ungapped(s1, s2);
+	benchmark_ungapped_sse(s1, s2);
+	benchmark_transpose();
+	swipe_cell_update();
+	swipe(s1, s2);
+	banded_swipe(s1, s2);
 }
+
+}}
